<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.afeefy.sara.universityfinder.Addhouse"
    android:orientation="vertical">

    <EditText
        android:id="@+id/ETNUMHOUSE"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/house"
        android:inputType="textPersonName|numberDecimal" />

    <EditText
        android:id="@+id/ETSUBJECT"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/subject"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/ETYEAR"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/year"
        android:inputType="numberDecimal" />

    <EditText
        android:id="@+id/ETSPACE"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/msa7a1"
        android:inputType="textPersonName|numberDecimal" />

    <EditText
        android:id="@+id/ETPHONENUMBER"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/phone"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/ETADDRESS"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/address11"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/ETCITY"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/city1"
        android:inputType="textPersonName" />

    <RadioGroup
        android:id="@+id/RGGENDER"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checkedButton="@+id/RBMALE">

        <RadioButton
            android:id="@+id/RBMALE"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/male1" />

        <RadioButton
            android:id="@+id/RBFEMALE"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/female" />
    </RadioGroup>

    <Button
        android:id="@+id/BTNSAVE"
        android:layout_width="173dp"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="@string/save" />

</LinearLayout>
